# lab-formatter

./: .appveyor.yml  .travis.yml  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  DESCRIPTION  appveyor.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
